test/good/basic/cmp05.px

func f(): Int def
    print 0
    return 0

print f() <= f() == f()
print f() < f() == f() >= [0][1] > f()
