test/bad/arrays/array06.px

func f() def
    return

[f()]
